@@ -1,3 +1,11 @@
+2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* CMakeLists.txt: 
+	- set SPARK_DIR environment flag when installed using NSIS installer
+	
+	* cmake/FindODE.cmake: 
+	- try to detect correct ODE preprocessor flag on Windows
+
 2009-07-24  Marian Buchta  <marian.buchta@gmail.com>
 
 	* cmake/FindRuby.cmake
